# docs/swagger.yaml
@@ -993,7 +993,7 @@ definitions:
     properties:
       available_aml_providers:
         items:
-          $ref: '#/definitions/github_com_dv-net_dv-merchant_internal_models.AMLSlug'
+          $ref: '#/definitions/github_com_dv-net_dv-merchant_internal_models.AMLProvider'
         type: array
       available_currencies:
         items:
@@ -1222,6 +1222,8 @@ definitions:
         type: string
       currency_id:
         type: string
+      is_dirty:
+        type: boolean
       is_sort_by_amount:
         type: boolean
       is_sort_by_balance:
@@ -3463,6 +3465,7 @@ definitions:
         - access_key
         - secret_key
         - access_id
+        - api_key
       value:
         type: string
     required:
@@ -3655,11 +3658,13 @@ definitions:
     - PaymentReceived
     - PaymentNotConfirmed
     - WithdrawalFromProcessingReceived
+    - PaymentAMLBlocked
     type: string
     x-enum-varnames:
     - WebhookEventPaymentReceived
     - WebhookEventPaymentNotConfirmed
     - WebhookEventWithdrawalFromProcessingReceived
+    - WebhookEventPaymentAMLBlocked
   WebhookKind:
     enum:
     - transfer
@@ -4065,14 +4070,23 @@ definitions:
     - AmlCheckStatusPending
     - AmlCheckStatusSuccess
     - AmlCheckStatusFailed
+  github_com_dv-net_dv-merchant_internal_models.AMLProvider:
+    properties:
+      label:
+        type: string
+      slug:
+        $ref: '#/definitions/github_com_dv-net_dv-merchant_internal_models.AMLSlug'
+    type: object
   github_com_dv-net_dv-merchant_internal_models.AMLSlug:
     enum:
     - aml_bot
     - bit_ok
+    - coin_kyt
     type: string
     x-enum-varnames:
     - AMLSlugAMLBot
     - AMLSlugBitOK
+    - AMLSlugCoinKyt
   github_com_dv-net_dv-merchant_internal_models.AddressType:
     enum:
     - deposit
@@ -4087,12 +4101,14 @@ definitions:
     - secret_key
     - access_key
     - access_id
+    - api_key
     type: string
     x-enum-varnames:
     - AmlKeyTypeAccessKeyID
     - AmlKeyTypeSecret
     - AmlKeyTypeAccessKey
     - AmlKeyTypeAccessID
+    - AmlKeyTypeAPIKey
   github_com_dv-net_dv-merchant_internal_models.AppProfile:
     enum:
     - dev
@@ -4874,12 +4890,14 @@ paths:
       - enum:
         - aml_bot
         - bit_ok
+        - coin_kyt
         in: query
         name: provider_slug
         type: string
         x-enum-varnames:
         - AMLSlugAMLBot
         - AMLSlugBitOK
+        - AMLSlugCoinKyt
       produces:
       - application/json
       responses:
